HAC-61 - Compile and run using Java 17 (#342)
* Upgrade Dropwizard and Guicey to 5.4.2

`useWebInstallers()` is now enabled by default so the method has been
removed in the new version.

There are also various cleanups to the Gradle dependencies:

Make use of Guicey's BOM file by using `implementation platform(..)`.
This allows us to omit many of the versions since Guicey and Dropwizard
will manage the compatible dependencies for us.

Dropwizard 5, uses Hibernate 5.4+ so we no longer need to constrain to
5.3 to get Java 11 working.

`guice`, `jaxb-api`, and `websocket-server` are all still in use but are
now pulled in through transitive dependencies.

Remove the `websocket-server` dependency since it is already included as
a transitive dependency of `javax-websocket-server-impl`

Remove the `mariadb-java-client` dependency, which is a leftover to when
a previous developer tried to use MariaDB. Refer to the commit 32c226c5,
where the `entrypoint.sh` file has commented out code saying: "MYSQL
doesn't seem to work".

HAC-61

* Upgrade compilation and docker to use Java 17

HAC-61

* Remove some deprecated code usage

HAC-60

* Upgrade game-engine's Mockito to 5.4.0

Mockito 2's InlineMockMaker does not work with Java 17 due to an older
version of Bytebuddy not being able to recognise the Java 17 bytecode.

The file, org.mockito.plugins.MockMaker, has been removed too since in
Mockito 5 the InlineMockMaker is used by default.

Powermock has also been removed since Mockito is capable of mocking
final classes.

HAC-61